[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/mainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/SettingsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=3]

[node name="GameMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="MainMenu" parent="." instance=ExtResource( 1 )]

[node name="Settings" parent="." instance=ExtResource( 2 )]

[connection signal="settings_pressed" from="MainMenu" to="." method="_on_MainMenu_settings_pressed"]
[connection signal="back_button" from="Settings" to="." method="_on_Settings_back_button"]
